# scorched-earth

./: .gitignore  Cargo.toml  README.md
scorched_earth_core/: Cargo.toml
scorched_earth_core/src/: lib.rs
scorched_earth_gui/: Cargo.toml
scorched_earth_gui/scorched_earth_gui/: Cargo.toml  Trunk.toml  index.html  main.rs
scorched_earth_gui/scorched_earth_gui/src/: lib.rs
scorched_earth_gui/scorched_earth_gui/src/screens/: game.rs  host.rs  join.rs  rules.rs  title.rs
scorched_earth_gui/src/: lib.rs  main.rs
scorched_earth_gui/src/js/GuiTest/: app.json  package-lock.json  package.json
scorched_earth_gui/src/screens/: end.rs  error.rs  game.rs  host.rs  input.rs  join.rs  mod.rs  rules.rs  title.rs
scorched_earth_network/: Cargo.toml
scorched_earth_network/examples/: noise_test.rs
scorched_earth_network/src/: lib.rs
scorched_earth_tui/: Cargo.toml
scorched_earth_tui/src/: main.rs
serp/: Cargo.toml  README.md
serp/examples/: send_to_test.rs
serp/src/: lib.rs
serpd/: Cargo.toml  README.md
serpd/src/: main.rs
src/: lib.rs  main.rs
