[package]
name = "scorched_earth_gui"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["lib", "cdylib"]
name = "scorched_earth_gui"
path = "src/lib.rs"

[[bin]]
name = "scorched_earth_gui_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21.3", default-features = false, features = ["default_fonts", "glow"]}
winit = "0.28.3"
getrandom = { version = "0.2", features = ["js"] }
scorched_earth_core = { path = "../scorched_earth_core" }
scorched_earth_network = { path = "../scorched_earth_network" }
tracing = "0.1.37"

[target.'cfg(android)'.dependencies]
android-activity = "0.4.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[package.metadata.android]
package = "com.foobarbaz.scorchedearth"
build_targets = ["aarch64-linux-android"]
apk_name = "scorchedearth"
