[package]
name = "scorched-earth-gui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "scorched_earth_gui_bin"
path = "src/main.rs"

[profile.dev]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
eframe = "0.21.3"
winit = "0.28.3"
# getrandom = { version = "0.2", features = ["js"] }
scorched_earth_core = { path = "../scorched_earth_core" }
scorched_earth_network = { path = "../scorched_earth_network" }
egui_extras = { version = "0.21.0", features = ["svg"] }
image = { version = "0.24", features = ["png", "jpeg"] }
rand = "0.8.5"
# tracing = "0.1.37"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = "0.4.1"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# console_error_panic_hook = "0.1.6"
# tracing-wasm = "0.2"
# wasm-bindgen-futures = "0.4"

[package.metadata.android]
package = "com.foobarbaz.scorchedearth"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
apk_name = "scorched_earth"

[package.metadata.android.application.activity]
window_soft_input_mode = "stateVisible"


[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
