[package]
name = "serpd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
dashmap = "5.4.0"
env_logger = "0.10.0"
log = "0.4.17"
once_cell = "1.17.0"
tokio = { version = "1.25.0", features = ["full"] }
