[package]
name = "scorched-earth-gui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# crate-type = ["lib", "cdylib"]
# name = "scorched_earth_gui_lib"
# path = "src/lib.rs"
#
# [[bin]]
# name = "scorched_earth_gui_bin"
# path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
winit = "0.28.3"
# getrandom = { version = "0.2", features = ["js"] }
scorched_earth_core = { path = "../scorched-earth/scorched_earth_core" }
scorched_earth_network = { path = "../scorched-earth/scorched_earth_network" }
# tracing = "0.1.37"
android-activity = "0.4.1"

[target.'cfg(target_os = "android")'.dependencies]

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# console_error_panic_hook = "0.1.6"
# tracing-wasm = "0.2"
# wasm-bindgen-futures = "0.4"

[package.metadata.android]
package = "com.foobarbaz.scorchedearth"
build_targets = ["aarch64-linux-android"]
apk_name = "scorched_earth"

[package.metadata.android.application.activity]
window_soft_input_mode = "stateVisible"


[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
